カテゴリモデルをバックエンド、フロントエンドで合わせる
